cards are barely visible on mobile, adding a border to fix

--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ section {
     background-color: rgb(10, 10, 10);
     margin: 15px;
     border-radius: 10px;
-    border: 2px solid black;
+    border: 1px solid white;
     /*box-shadow: 0px 2px 2px 0px white;*/
 }
 
